--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -91,28 +91,30 @@ body{
     height: 300px;
     background-color: #ffffff;
     padding-left: 30%;
+    z-index: 1;
 
     &:before{
       display: block;
       content: '';
       width: 100%;
-      height: 100px;
+      height: 200px;
       position: absolute;
       border-top-left-radius: 50%;
       border-top-right-radius: 50%;
       top: -100px;
       left: 0;
-      background: url("../images/icon-1.png") 50% no-repeat #fff;
+      background: url("../images/icon-1.png") 50% 22% no-repeat #fff;
+      z-index: -1;
     }
     &--primary{
       height: 330px;
     }
     &--primary::before{
-      background: url("../images/icon-2.png") 50% no-repeat #fff;
+      background: url("../images/icon-2.png") 50% 22% no-repeat #fff;
     }
   }
   &:nth-child(3) &__details:before{
-    background: url("../images/icon-3.png") 50% no-repeat #fff;
+    background: url("../images/icon-3.png") 50% 22% no-repeat #fff;
   }
 
   &__description{
@@ -140,6 +142,7 @@ body{
     left: 50%;
     margin-left: -101px;
     transform: translateY(33%);
+    z-index: 2;
 
     &:hover{
       box-shadow: 0 0 10px 0 rgba(133, 192, 247, 1);
